--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,3 @@
-[build]
-  command = ""
-  publish = "."
-
-[[headers]]
-  for = "/*"
-  [headers.values]
-  Access-Control-Allow-Origin = "*"
-  Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
-  Access-Control-Allow-Headers = "Content-Type, X-Blob-Path, X-Blob-Meta-Client-Id, X-Blob-Meta-Client-Name, X-Blob-Meta-Category, X-Blob-Meta-Tags"
+[functions]
+  directory = "netlify/functions"
+  node_bundler = "esbuild"
