--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "arkon-netlify-blobs",
+  "name": "arkon-crm",
   "version": "1.0.0",
   "type": "module",
-  "private": true,
   "dependencies": {
-    "@netlify/blobs": "^6.4.1",
-    "busboy": "^1.6.0"
+    "@netlify/blobs": "^7.0.0",
+    "@netlify/neon": "^0.7.0"
   }
 }
