--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,12 @@
-[functions]
-  directory = "netlify/functions"
-  node_bundler = "none"       
+# netlify.toml
 
+[build]
+  # nic nie budujesz – serwujemy pliki z katalogu głównego
+  publish = "."
+  command = ""
+
+[functions]
+  # miejsce Twoich funkcji
+  directory    = "netlify/functions"
+  # bundlowanie ESM – działa z plikami .mjs i "type":"module"
+  node_bundler = "esbuild"
