--- a/netlify.toml
+++ b/netlify.toml
@@ -1,1 +1,10 @@
-publish = "public"
+[build]
+publish = "."
+command = ""
+
+[functions]
+directory = "netlify/functions"
+node_bundler = "esbuild"
+
+[build.environment]
+NODE_VERSION = "20"
