--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,11 @@
+
 [build]
 publish = "."
 command = ""
 
+[functions]
+directory = "netlify/functions"
+node_bundler = "esbuild"
+
+[build.environment]
+NODE_VERSION = "20"
