--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
-
 {
   "name": "arkon-crm",
   "version": "1.0.0",
   "type": "module",
-  "private": true,
-  "dependencies": {
-    "@supabase/supabase-js": "2.45.4"
-  }
+  "private": true
 }
