--- a/netlify.toml
+++ b/netlify.toml
@@ -1,23 +1,25 @@
 [build]
-  publish = "dist"          # lub "public" / "." – zgodnie z Twoim projektem statycznym
-  functions = "netlify/functions"
+# brak komendy budowania – to czysty HTML/CSS/JS
+command = ""
+# publikujemy katalog główny repo (tam gdzie index.html / chat.html)
+publish = "/"
 
 [functions]
-  node_bundler = "esbuild"
-  included_files = []
+directory = "netlify/functions"
+node_bundler = "esbuild"
 
-# (opcjonalnie) przekierowania dla funkcji (ładne ścieżki)
+# API aliasy
 [[redirects]]
-  from = "/api/hello"
-  to = "/.netlify/functions/hello"
-  status = 200
-
-[[redirects]]
-  from = "/api/messages"
-  to = "/.netlify/functions/messages"
-  status = 200
+from = "/api/hello"
+to = "/.netlify/functions/hello"
+status = 200
 
 [[redirects]]
-  from = "/api/upload"
-  to = "/.netlify/functions/upload"
-  status = 200
+from = "/api/messages"
+to = "/.netlify/functions/messages"
+status = 200
+
+[[redirects]]
+from = "/api/upload"
+to = "/.netlify/functions/upload"
+status = 200
