--- a/netlify.toml
+++ b/netlify.toml
@@ -1,30 +1,31 @@
-# === Build ===
+
 [build]
   publish = "."
   node_bundler = "esbuild"
 
-# === Functions ===
 [functions]
-  directory = "netlify/functions"
   node_bundler = "esbuild"
+  directory = "netlify/functions"
 
-# === API aliasy (rewrites do Functions) ===
+# --- API aliasy ---
 
 # contracts
 [[redirects]]
   from = "/api/contracts"
   to   = "/.netlify/functions/contracts"
   status = 200
+
 [[redirects]]
   from = "/api/contracts/*"
   to   = "/.netlify/functions/contracts/:splat"
   status = 200
 
-# docs (upload/list/pobieranie plików)
+# docs
 [[redirects]]
   from = "/api/docs"
   to   = "/.netlify/functions/docs"
   status = 200
+
 [[redirects]]
   from = "/api/docs/*"
   to   = "/.netlify/functions/docs/:splat"
@@ -35,45 +36,36 @@
   from = "/api/tasks"
   to   = "/.netlify/functions/tasks"
   status = 200
+
 [[redirects]]
   from = "/api/tasks/*"
   to   = "/.netlify/functions/tasks/:splat"
   status = 200
 
-# chat: messages
+# messages (chat)
 [[redirects]]
   from = "/api/messages"
   to   = "/.netlify/functions/messages"
   status = 200
-[[redirects]]
-  from = "/api/messages/*"
-  to   = "/.netlify/functions/messages/:splat"
-  status = 200
 
-# chat: upload załączników
+# upload (chat attachments)
 [[redirects]]
   from = "/api/upload"
   to   = "/.netlify/functions/upload"
   status = 200
-[[redirects]]
-  from = "/api/upload/*"
-  to   = "/.netlify/functions/upload/:splat"
-  status = 200
 
-# (opcjonalnie) ping/hello — jeśli masz hello.js
-[[redirects]]
-  from = "/api/hello"
-  to   = "/.netlify/functions/hello"
-  status = 200
+# --- Nagłówki ---
 
-# (opcjonalnie) wyłączieserwerowe cachowanie dla HTML
+# brak cachowania HTML
 [[headers]]
   for = "/*.html"
   [headers.values]
     Cache-Control = "no-cache, no-store, must-revalidate"
 
-# (opcjonalnie) podstawowe CORS dla statycznych (funkcje mają swoje nagłówki)
+# CORS dla wszystkich zasobów (statycznych)
 [[headers]]
   for = "/*"
   [headers.values]
-    Access-Control-Allow-Origin = "*
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, POST, PUT, PATCH, DELETE, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type, Authorization"
