Modify netlify.toml for redirects and CORS settings

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,20 +1,23 @@
-
+# ============ BUILD ============
 [build]
   publish = "."
-  node_bundler = "esbuild"
+  # (opcjonalnie) jeśli używasz starej konwencji:
+  # functions = "netlify/functions"
 
 [functions]
   node_bundler = "esbuild"
-  directory = "netlify/functions"
+  directory    = "netlify/functions"
 
-# --- API aliasy ---
+# (opcjonalnie lokalny dev dla stron statycznych)
+[dev]
+  framework = "#static"
 
+# ============ API REDIRECTS / REWRITES ============
 # contracts
 [[redirects]]
   from = "/api/contracts"
   to   = "/.netlify/functions/contracts"
   status = 200
-
 [[redirects]]
   from = "/api/contracts/*"
   to   = "/.netlify/functions/contracts/:splat"
@@ -25,7 +28,6 @@
   from = "/api/docs"
   to   = "/.netlify/functions/docs"
   status = 200
-
 [[redirects]]
   from = "/api/docs/*"
   to   = "/.netlify/functions/docs/:splat"
@@ -36,7 +38,6 @@
   from = "/api/tasks"
   to   = "/.netlify/functions/tasks"
   status = 200
-
 [[redirects]]
   from = "/api/tasks/*"
   to   = "/.netlify/functions/tasks/:splat"
@@ -47,25 +48,57 @@
   from = "/api/messages"
   to   = "/.netlify/functions/messages"
   status = 200
+[[redirects]]
+  from = "/api/messages/*"
+  to   = "/.netlify/functions/messages/:splat"
+  status = 200
 
 # upload (chat attachments)
 [[redirects]]
   from = "/api/upload"
   to   = "/.netlify/functions/upload"
   status = 200
+[[redirects]]
+  from = "/api/upload/*"
+  to   = "/.netlify/functions/upload/:splat"
+  status = 200
 
-# --- Nagłówki ---
+# store (dodatkowy backend czatu na Blobs)
+[[redirects]]
+  from = "/api/store"
+  to   = "/.netlify/functions/store"
+  status = 200
+[[redirects]]
+  from = "/api/store/*"
+  to   = "/.netlify/functions/store/:splat"
+  status = 200
 
-# brak cachowania HTML
+# hello (test)
+[[redirects]]
+  from = "/api/hello"
+  to   = "/.netlify/functions/hello"
+  status = 200
+
+# ============ CORS DLA /api/* ============
+# Te nagłówki dodajemy na ścieżce, której używasz z frontendu.
+# (Nie wstawiaj tu backticków! Wartości MUSZĄ być w cudzysłowach.)
 [[headers]]
-  for = "/*.html"
+  for = "/api/*"
   [headers.values]
-    Cache-Control = "no-cache, no-store, must-revalidate"
-
-# CORS dla wszystkich zasobów (statycznych)
-[[headers]]
-  for = "/*"
-  [headers.values]
-    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Origin  = "*"
     Access-Control-Allow-Methods = "GET, POST, PUT, PATCH, DELETE, OPTIONS"
     Access-Control-Allow-Headers = "Content-Type, Authorization"
+
+# (opcjonalnie) te same nagłówki bezpośrednio dla adresów funkcji
+[[headers]]
+  for = "/.netlify/functions/*"
+  [headers.values]
+    Access-Control-Allow-Origin  = "*"
+    Access-Control-Allow-Methods = "GET, POST, PUT, PATCH, DELETE, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type, Authorization"
+
+# ============ STATIC CACHE (opcjonalnie) ============
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
