--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,13 @@
+
+[build]
+  publish = "public"          # katalog z HTML/CSS/JS (podmień jeśli inny, np. ".")
+  functions = "netlify/functions"
+
 [functions]
   node_bundler = "esbuild"
-  external_node_modules = ["@netlify/neon"]
+  # nie musisz podawać external_node_modules, esbuild sam zbierze @neondatabase/serverless
 
 [[redirects]]
   from = "/api/*"
-  to   = "/.netlify/functions/:splat"
+  to = "/.netlify/functions/:splat"
   status = 200
